--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
       </label>
       <button type="submit">Search</button>
     </form>
-    <span class="loader is-hidden"></span>
+
     <ul class="gallery"></ul>
+    <span class="loader is-hidden"></span>
+    <button class="js-button is-hidden" type="button">Load more</button>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
