--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,22 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <form class="form">
-      <label>
-        <input type="text" name="search-text" placeholder="Search images..." />
-      </label>
-      <button type="submit">Search</button>
-    </form>
+    <div class="container">
+      <form class="form">
+        <label>
+          <input
+            type="text"
+            name="search-text"
+            placeholder="Search images..."
+          />
+        </label>
+        <button type="submit">Search</button>
+      </form>
 
-    <ul class="gallery"></ul>
-    <span class="loader is-hidden"></span>
-    <button class="js-button is-hidden" type="button">Load more</button>
+      <ul class="gallery"></ul>
+      <span class="loader is-hidden"></span>
+      <button class="js-button is-hidden" type="button">Load more</button>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
